// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Code Export Python pytest should export a suite 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities


class RPAInfo:
  driver = None
  delay = 0.3
  waitTime = 2100
  vars = {}

  def getDriver(self):
    time.sleep(self.delay)
    if self.driver is None:
      self.driver = webdriver.Chrome()
    self.driver.implicitly_wait(self.waitTime)
    return self.driver


def valid credentials(driver, parm1, parm2):
  self = RPAInfo()
  self.driver = driver
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").clear()
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(parm1)
  self.getDriver().find_element(By.ID, \\"password\\").clear()
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(parm2)
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.CSS_SELECTOR, \\".flash.success\\").text == \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"
  return self
  
  
def invalid credentials(driver):
  self = RPAInfo()
  self.driver = driver
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.ID, \\"username\\").clear()
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(\\"blah\\")
  self.getDriver().find_element(By.ID, \\"password\\").clear()
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(\\"blah\\")
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.ID, \\"flash\\").text == \\"Your username is invalid!\\\\\\\\\\\\\\\\n×\\"
  return self
  
  
"
`;

exports[`Code Export Python pytest should export a test 1`] = `
"# Generated by JetRecord
import pytest
import time
import json
from selenium import webdriver
from selenium.webdriver.common.by import By
from selenium.webdriver.common.action_chains import ActionChains
from selenium.webdriver.support import expected_conditions
from selenium.webdriver.support.wait import WebDriverWait
from selenium.webdriver.common.keys import Keys
from selenium.webdriver.common.desired_capabilities import DesiredCapabilities


class RPAInfo:
  driver = None
  delay = 0.3
  waitTime = 1400
  vars = {}

  def getDriver(self):
    time.sleep(self.delay)
    if self.driver is None:
      self.driver = webdriver.Chrome()
    self.driver.implicitly_wait(self.waitTime)
    return self.driver


def login(driver, parm1, parm2, parm3):
  self = RPAInfo()
  self.driver = driver
  self.getDriver().get(\\"http://the-internet.herokuapp.com/login\\")
  self.getDriver().set_window_size(1440, 1177)
  self.getDriver().find_element(By.XPATH, \\"//input[@id=\\\\'\\"+parm1+\\"\\\\']\\").click()
  self.getDriver().find_element(By.ID, \\"username\\").clear()
  self.getDriver().find_element(By.ID, \\"username\\").send_keys(parm2)
  self.getDriver().find_element(By.ID, \\"password\\").clear()
  self.getDriver().find_element(By.ID, \\"password\\").send_keys(parm3)
  self.getDriver().find_element(By.CSS_SELECTOR, \\"#login button\\").click()
  assert self.getDriver().find_element(By.CSS_SELECTOR, \\".flash.success\\").text == \\"You logged into a secure area!\\\\\\\\\\\\\\\\n×\\"
  return self
  
  
"
`;
